[BUGFIX] downgrade uncss to compatible version too postcss-uncss (+4 squashed commits) Squashed commits: [c25f884] [FEATURE] add search styling [180d1bd] [WIP] add search [5399a69] [TASK] update npm packages [2af0f4b] [WIP]

--- a/docs/kss-assets/kss.scss
+++ b/docs/kss-assets/kss.scss
@@ -568,11 +568,25 @@ a {
 
 .kss-search {
 
+  &__input {
+    box-sizing: border-box;
+    @extend .w-full;
+    @extend .p-2;
+  }
+
   &__list {
-    @extend .hidden;
+    //@extend .list-reset;
+    @extend .bg-grey-lighter;
+    @extend .mt-0;
+    @extend .p-2;
+    display: none;
 
     &--display {
-      @extend .block;
+      display: block;
     }
+  }
+
+  &__desc {
+    display: none !important;
   }
 }
